# hed

./: .gitattributes  CHANGELOG.md  LICENSE  README.md  TODO.md  clean.hint  hed.cabal  stack.yaml
app/: Main.hs
res/: changes.txt  commands.txt  help.txt  license.txt  regex.txt  version.txt
src/: CommandParser.hs  Commands.hs  RegEx.hs  Resources.hs  Runner.hs  Utils.hs
test/: CommandParserSpec.hs  RegExSpec.hs
