name:                hed
version:             0.0.0.0
synopsis:            An ed clone
description:         An ed(itor) clone written in Haskell
homepage:            https://github.com/jecxjo/hed#readme
license:             BSD3
license-file:        LICENSE
author:              Jeff Parent
maintainer:          jeff@commentedcode.org
copyright:           2017 Jeff Parent
category:            Editor
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Commands
                     , CommandParser
                     , Runner
                     , RegEx
                     , Resources
                     , Utils
  build-depends:       base >= 4.7 && < 5
                     , text
                     , parsec
                     , vector
                     , mtl
                     , directory
                     , regex-pcre-builtin
                     , process
                     , bytestring
                     , file-embed
                     , terminal-size
  default-language:    Haskell2010

executable hed
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hed
  default-language:    Haskell2010

test-suite hed-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , text
                     , hed
                     , parsec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jecxjo/hed
